# Kurosagol

./: README.md  pyproject.toml
FOLIO/FOLIO/: folio_test.jsonl  folio_train.jsonl  folio_validation.jsonl
FOLIO/__MACOSX/FOLIO/: ._folio_test.jsonl  ._folio_train.jsonl
Kurosagol/: Kurosagol.py  align.py  create_pref_dataset.py  evaluation.py  llm_testing.py  logic_sim.py  main.py  prompts.txt  quick_check.py  test.py  tutorials.py  utils.py
Ongoing/: NM Alignment.ipynb  NM Baseline.ipynb  NM Evaluation.ipynb  NM Inference Qwen.ipynb  NM Inference.ipynb  NM Retranslation.ipynb  NM Translation.ipynb  NewAlgsDatasets.ipynb  NewerModels.ipynb  cluster.sh  datasetsinference_results.csv  trabajo a seguir.txt  vLLM tests.ipynb
Ongoing/alignment_results/test/: KTO_DeepSeek-R1-0528-Qwen3-8B_full.csv  KTO_Qwen3-14B_full.csv  KTO_gemma-3-12b-it_full.csv
Ongoing/alignment_results/validation/: KTO_DeepSeek-R1-0528-Qwen3-8B_full.csv  KTO_Qwen3-14B_full.csv  KTO_gemma-3-12b-it_full.csv
Ongoing/baseline_datasets/test/: gemma-3-12b-it_full.csv
Ongoing/baseline_datasets/validation/: gpt-oss-20b_full.csv
Ongoing/datasets_new/: gpt_infer.csv  qwen_retrans.csv
Ongoing/datasets_old/: gpt_inference_results.csv  gpt_qwen_translations_8ktokens.csv
tests/: Alignment and Eval.ipynb  CombiningDatasets.ipynb  Correct Evaluation.ipynb  Evaluation.ipynb  Final Dataset Formatting.ipynb  New Dataset Structure.ipynb  Running Various LLMs.ipynb  TestingMetric.ipynb
tests/.ipynb_checkpoints/: Running Various LLMs-checkpoint.ipynb
(+65 files in other folders)
