[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Kurosagol"
version = "0.0.1"
authors = [
  { name="Francisco López", email="francisco.lopez.ponce@ciencias.unam.mx" },
]
description = "Paqutería para trabajar en mi tesis de maestría"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Kurocaguama/Kurosagol"
Issues = "https://github.com/Kurocaguama/Kurosagol/issues"